# learn_mcp

./: README.md  pyproject.toml
zero_fastmcp/: __init__.py
zero_fastmcp/client/: client.py
zero_fastmcp/core/: __init__.py  executor.py  protocol.py  transport.py  types.py
zero_fastmcp/examples/: demo_client.py  demo_dashboard.py  demo_register.py  demo_server.py  demo_sse_client.py  demo_sse_server.py  demo_stdio_client.py  demo_stdio_server.py
zero_fastmcp/middleware/: __init__.py  middleware.py
zero_fastmcp/server/: __init__.py  dashboard.html  server.py  stats.py
zero_fastmcp/server/transports/: __init__.py  http.py  sse.py  stdio.py
